--- a/src/MLS.MatLidStoreUI/src/app/theme/components/header/header.component.html
+++ b/src/MLS.MatLidStoreUI/src/app/theme/components/header/header.component.html
@@ -23,7 +23,7 @@
         </svg>
       </button>
     </div>
-    <div class="hidden lg:flex lg:gap-x-12" *ngIf="isLoggedIn">
+    <div *ngIf="isLoggedIn" class="hidden lg:flex lg:gap-x-12">
       <div class="relative">
         <button
           (click)="toggleProductMenu()"
@@ -46,18 +46,18 @@
               <div
                 class="flex h-11 w-11 flex-none items-center justify-center rounded-lg bg-gray-50 group-hover:bg-white">
                 <svg
+                  aria-hidden="true"
                   class="h-6 w-6 text-gray-600 group-hover:text-indigo-600"
                   fill="none"
-                  viewBox="0 0 24 24"
-                  stroke-width="1.5"
                   stroke="currentColor"
-                  aria-hidden="true">
-                  <path stroke-linecap="round" stroke-linejoin="round" d="M10.5 6a7.5 7.5 0 107.5 7.5h-7.5V6z" />
-                  <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 10.5H21A7.5 7.5 0 0013.5 3v7.5z" />
+                  stroke-width="1.5"
+                  viewBox="0 0 24 24">
+                  <path d="M10.5 6a7.5 7.5 0 107.5 7.5h-7.5V6z" stroke-linecap="round" stroke-linejoin="round" />
+                  <path d="M13.5 10.5H21A7.5 7.5 0 0013.5 3v7.5z" stroke-linecap="round" stroke-linejoin="round" />
                 </svg>
               </div>
               <div class="flex-auto">
-                <a href="#" class="block font-semibold text-gray-900">
+                <a class="block font-semibold text-gray-900" href="#">
                   Analytics
                   <span class="absolute inset-0"></span>
                 </a>
@@ -68,20 +68,20 @@
               <div
                 class="flex h-11 w-11 flex-none items-center justify-center rounded-lg bg-gray-50 group-hover:bg-white">
                 <svg
+                  aria-hidden="true"
                   class="h-6 w-6 text-gray-600 group-hover:text-indigo-600"
                   fill="none"
-                  viewBox="0 0 24 24"
-                  stroke-width="1.5"
                   stroke="currentColor"
-                  aria-hidden="true">
+                  stroke-width="1.5"
+                  viewBox="0 0 24 24">
                   <path
+                    d="M15.042 21.672L13.684 16.6m0 0l-2.51 2.225.569-9.47 5.227 7.917-3.286-.672zM12 2.25V4.5m5.834.166l-1.591 1.591M20.25 10.5H18M7.757 14.743l-1.59 1.59M6 10.5H3.75m4.007-4.243l-1.59-1.59"
                     stroke-linecap="round"
-                    stroke-linejoin="round"
-                    d="M15.042 21.672L13.684 16.6m0 0l-2.51 2.225.569-9.47 5.227 7.917-3.286-.672zM12 2.25V4.5m5.834.166l-1.591 1.591M20.25 10.5H18M7.757 14.743l-1.59 1.59M6 10.5H3.75m4.007-4.243l-1.59-1.59" />
+                    stroke-linejoin="round" />
                 </svg>
               </div>
               <div class="flex-auto">
-                <a href="#" class="block font-semibold text-gray-900">
+                <a class="block font-semibold text-gray-900" href="#">
                   Engagement
                   <span class="absolute inset-0"></span>
                 </a>
@@ -92,20 +92,20 @@
               <div
                 class="flex h-11 w-11 flex-none items-center justify-center rounded-lg bg-gray-50 group-hover:bg-white">
                 <svg
+                  aria-hidden="true"
                   class="h-6 w-6 text-gray-600 group-hover:text-indigo-600"
                   fill="none"
-                  viewBox="0 0 24 24"
-                  stroke-width="1.5"
                   stroke="currentColor"
-                  aria-hidden="true">
+                  stroke-width="1.5"
+                  viewBox="0 0 24 24">
                   <path
+                    d="M7.864 4.243A7.5 7.5 0 0119.5 10.5c0 2.92-.556 5.709-1.568 8.268M5.742 6.364A7.465 7.465 0 004.5 10.5a7.464 7.464 0 01-1.15 3.993m1.989 3.559A11.209 11.209 0 008.25 10.5a3.75 3.75 0 117.5 0c0 .527-.021 1.049-.064 1.565M12 10.5a14.94 14.94 0 01-3.6 9.75m6.633-4.596a18.666 18.666 0 01-2.485 5.33"
                     stroke-linecap="round"
-                    stroke-linejoin="round"
-                    d="M7.864 4.243A7.5 7.5 0 0119.5 10.5c0 2.92-.556 5.709-1.568 8.268M5.742 6.364A7.465 7.465 0 004.5 10.5a7.464 7.464 0 01-1.15 3.993m1.989 3.559A11.209 11.209 0 008.25 10.5a3.75 3.75 0 117.5 0c0 .527-.021 1.049-.064 1.565M12 10.5a14.94 14.94 0 01-3.6 9.75m6.633-4.596a18.666 18.666 0 01-2.485 5.33" />
+                    stroke-linejoin="round" />
                 </svg>
               </div>
               <div class="flex-auto">
-                <a href="#" class="block font-semibold text-gray-900">
+                <a class="block font-semibold text-gray-900" href="#">
                   Security
                   <span class="absolute inset-0"></span>
                 </a>
@@ -116,20 +116,20 @@
               <div
                 class="flex h-11 w-11 flex-none items-center justify-center rounded-lg bg-gray-50 group-hover:bg-white">
                 <svg
+                  aria-hidden="true"
                   class="h-6 w-6 text-gray-600 group-hover:text-indigo-600"
                   fill="none"
-                  viewBox="0 0 24 24"
-                  stroke-width="1.5"
                   stroke="currentColor"
-                  aria-hidden="true">
+                  stroke-width="1.5"
+                  viewBox="0 0 24 24">
                   <path
+                    d="M13.5 16.875h3.375m0 0h3.375m-3.375 0V13.5m0 3.375v3.375M6 10.5h2.25a2.25 2.25 0 002.25-2.25V6a2.25 2.25 0 00-2.25-2.25H6A2.25 2.25 0 003.75 6v2.25A2.25 2.25 0 006 10.5zm0 9.75h2.25A2.25 2.25 0 0010.5 18v-2.25a2.25 2.25 0 00-2.25-2.25H6a2.25 2.25 0 00-2.25 2.25V18A2.25 2.25 0 006 20.25zm9.75-9.75H18a2.25 2.25 0 002.25-2.25V6A2.25 2.25 0 0018 3.75h-2.25A2.25 2.25 0 0013.5 6v2.25a2.25 2.25 0 002.25 2.25z"
                     stroke-linecap="round"
-                    stroke-linejoin="round"
-                    d="M13.5 16.875h3.375m0 0h3.375m-3.375 0V13.5m0 3.375v3.375M6 10.5h2.25a2.25 2.25 0 002.25-2.25V6a2.25 2.25 0 00-2.25-2.25H6A2.25 2.25 0 003.75 6v2.25A2.25 2.25 0 006 10.5zm0 9.75h2.25A2.25 2.25 0 0010.5 18v-2.25a2.25 2.25 0 00-2.25-2.25H6a2.25 2.25 0 00-2.25 2.25V18A2.25 2.25 0 006 20.25zm9.75-9.75H18a2.25 2.25 0 002.25-2.25V6A2.25 2.25 0 0018 3.75h-2.25A2.25 2.25 0 0013.5 6v2.25a2.25 2.25 0 002.25 2.25z" />
+                    stroke-linejoin="round" />
                 </svg>
               </div>
               <div class="flex-auto">
-                <a href="#" class="block font-semibold text-gray-900">
+                <a class="block font-semibold text-gray-900" href="#">
                   Integrations
                   <span class="absolute inset-0"></span>
                 </a>
@@ -140,20 +140,20 @@
               <div
                 class="flex h-11 w-11 flex-none items-center justify-center rounded-lg bg-gray-50 group-hover:bg-white">
                 <svg
+                  aria-hidden="true"
                   class="h-6 w-6 text-gray-600 group-hover:text-indigo-600"
                   fill="none"
-                  viewBox="0 0 24 24"
-                  stroke-width="1.5"
                   stroke="currentColor"
-                  aria-hidden="true">
+                  stroke-width="1.5"
+                  viewBox="0 0 24 24">
                   <path
+                    d="M16.023 9.348h4.992v-.001M2.985 19.644v-4.992m0 0h4.992m-4.993 0l3.181 3.183a8.25 8.25 0 0013.803-3.7M4.031 9.865a8.25 8.25 0 0113.803-3.7l3.181 3.182m0-4.991v4.99"
                     stroke-linecap="round"
-                    stroke-linejoin="round"
-                    d="M16.023 9.348h4.992v-.001M2.985 19.644v-4.992m0 0h4.992m-4.993 0l3.181 3.183a8.25 8.25 0 0013.803-3.7M4.031 9.865a8.25 8.25 0 0113.803-3.7l3.181 3.182m0-4.991v4.99" />
+                    stroke-linejoin="round" />
                 </svg>
               </div>
               <div class="flex-auto">
-                <a href="#" class="block font-semibold text-gray-900">
+                <a class="block font-semibold text-gray-900" href="#">
                   Automations
                   <span class="absolute inset-0"></span>
                 </a>
@@ -163,24 +163,24 @@
           </div>
           <div class="grid grid-cols-2 divide-x divide-gray-900/5 bg-gray-50">
             <a
-              href="#"
-              class="flex items-center justify-center gap-x-2.5 p-3 text-sm font-semibold leading-6 text-gray-900 hover:bg-gray-100">
-              <svg class="h-5 w-5 flex-none text-gray-400" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+              class="flex items-center justify-center gap-x-2.5 p-3 text-sm font-semibold leading-6 text-gray-900 hover:bg-gray-100"
+              href="#">
+              <svg aria-hidden="true" class="h-5 w-5 flex-none text-gray-400" fill="currentColor" viewBox="0 0 20 20">
                 <path
-                  fill-rule="evenodd"
+                  clip-rule="evenodd"
                   d="M2 10a8 8 0 1116 0 8 8 0 01-16 0zm6.39-2.908a.75.75 0 01.766.027l3.5 2.25a.75.75 0 010 1.262l-3.5 2.25A.75.75 0 018 12.25v-4.5a.75.75 0 01.39-.658z"
-                  clip-rule="evenodd" />
+                  fill-rule="evenodd" />
               </svg>
               Watch demo
             </a>
             <a
-              href="#"
-              class="flex items-center justify-center gap-x-2.5 p-3 text-sm font-semibold leading-6 text-gray-900 hover:bg-gray-100">
-              <svg class="h-5 w-5 flex-none text-gray-400" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+              class="flex items-center justify-center gap-x-2.5 p-3 text-sm font-semibold leading-6 text-gray-900 hover:bg-gray-100"
+              href="#">
+              <svg aria-hidden="true" class="h-5 w-5 flex-none text-gray-400" fill="currentColor" viewBox="0 0 20 20">
                 <path
-                  fill-rule="evenodd"
+                  clip-rule="evenodd"
                   d="M2 3.5A1.5 1.5 0 013.5 2h1.148a1.5 1.5 0 011.465 1.175l.716 3.223a1.5 1.5 0 01-1.052 1.767l-.933.267c-.41.117-.643.555-.48.95a11.542 11.542 0 006.254 6.254c.395.163.833-.07.95-.48l.267-.933a1.5 1.5 0 011.767-1.052l3.223.716A1.5 1.5 0 0118 15.352V16.5a1.5 1.5 0 01-1.5 1.5H15c-1.149 0-2.263-.15-3.326-.43A13.022 13.022 0 012.43 8.326 13.019 13.019 0 012 5V3.5z"
-                  clip-rule="evenodd" />
+                  fill-rule="evenodd" />
               </svg>
               Contact sales
             </a>
@@ -192,10 +192,10 @@
       <a class="text-sm font-semibold leading-6 text-gray-900" href="#">Company</a>
     </div>
     <div class="hidden lg:flex lg:flex-1 lg:justify-end">
-      <button *ngIf="!isLoggedIn" (click)="loginClick()" class="text-sm font-semibold leading-6 text-gray-900">
+      <button (click)="loginClick()" *ngIf="!isLoggedIn" class="text-sm font-semibold leading-6 text-gray-900">
         {{ getHeaderText() }} <span aria-hidden="true">&rarr;</span>
       </button>
-      <button *ngIf="isLoggedIn" (click)="logoutClick()" class="text-sm font-semibold leading-6 text-gray-900">
+      <button (click)="logoutClick()" *ngIf="isLoggedIn" class="text-sm font-semibold leading-6 text-gray-900">
         Đăng xuất <span aria-hidden="true">&rarr;</span>
       </button>
     </div>
@@ -227,7 +227,7 @@
       </div>
       <div class="mt-6 flow-root">
         <div class="-my-6 divide-y divide-gray-500/10">
-          <div class="space-y-2 py-6" *ngIf="isLoggedIn">
+          <div *ngIf="isLoggedIn" class="space-y-2 py-6">
             <div class="-mx-3">
               <button
                 (click)="toggleProductMenu()"
@@ -302,14 +302,14 @@
           </div>
           <div class="py-6">
             <button
-              *ngIf="!isLoggedIn"
               (click)="loginClick()"
+              *ngIf="!isLoggedIn"
               class="-mx-3 block rounded-lg px-3 py-2.5 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50">
               {{ getHeaderText() }}
             </button>
             <button
-              *ngIf="isLoggedIn"
               (click)="logoutClick()"
+              *ngIf="isLoggedIn"
               class="-mx-3 block rounded-lg px-3 py-2.5 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50">
               Đăng xuất
             </button>
