--- a/src/MLS.MatLidStoreUI/src/app/theme/pages/account/account.component.html
+++ b/src/MLS.MatLidStoreUI/src/app/theme/pages/account/account.component.html
@@ -25,27 +25,27 @@
             <label class="mb-2 text-sm text-start text-grey-900" for="username">Tên người dùng*</label>
             <input
               [(ngModel)]="model.username"
-              name="username"
               class="flex items-center w-full px-5 py-4 mr-2 text-sm font-medium outline-none focus:bg-grey-400 mb-7 placeholder:text-grey-700 bg-grey-200 text-dark-grey-900 rounded-2xl"
               id="username"
+              name="username"
               placeholder="Nhập tên người dùng"
               type="text" />
             <label class="mb-2 text-sm text-start text-grey-900" for="password">Mật khẩu*</label>
             <div class="relative">
               <input
                 [(ngModel)]="model.password"
-                name="password"
+                [type]="showPassword ? 'text' : 'password'"
                 class="w-full px-5 py-4 pr-12 text-sm font-medium outline-none placeholder:text-grey-700 bg-grey-200 text-dark-grey-900 rounded-2xl"
                 id="password"
+                name="password"
                 placeholder="Nhập mật khẩu"
-                [type]="showPassword ? 'text' : 'password'"
                 required />
               <button
-                type="button"
                 (click)="togglePassword()"
-                class="absolute inset-y-0 right-0 flex items-center px-3"
                 aria-label="Toggle password visibility"
-                title="{{ showPassword ? 'Ẩn mật khẩu' : 'Hiển thị mật khẩu' }}">
+                class="absolute inset-y-0 right-0 flex items-center px-3"
+                title="{{ showPassword ? 'Ẩn mật khẩu' : 'Hiển thị mật khẩu' }}"
+                type="button">
                 <i *ngIf="showPassword" class="fa fa-eye text-gray-600 hover:text-gray-800 transition duration-300"></i>
                 <i
                   *ngIf="!showPassword"
@@ -66,13 +66,13 @@
               <a class="mr-4 text-sm font-medium text-purple-blue-500" href="javascript:void(0)">Quên mật khẩu?</a>
             </div>
             <button
-              type="submit"
-              class="w-full px-6 py-3 mb-5 text-sm font-bold leading-none text-white transition duration-300 md:w-96 rounded-2xl hover:bg-purple-blue-600 focus:ring-4 focus:ring-purple-blue-100 bg-purple-blue-500">
+              class="w-full px-6 py-3 mb-5 text-sm font-bold leading-none text-white transition duration-300 md:w-96 rounded-2xl hover:bg-purple-blue-600 focus:ring-4 focus:ring-purple-blue-100 bg-purple-blue-500"
+              type="submit">
               Đăng nhập
             </button>
             <p class="text-sm leading-relaxed text-grey-900">
               Nếu bạn chưa đăng ký?
-              <a href="#" routerLink="/account/register" class="font-bold text-grey-700"> Tạo một tài khoản </a>
+              <a class="font-bold text-grey-700" href="#" routerLink="/account/register"> Tạo một tài khoản </a>
             </p>
           </form>
         </div>
