--- a/src/MLS.MatLidStoreUI/src/app/theme/pages/account/register/register.component.html
+++ b/src/MLS.MatLidStoreUI/src/app/theme/pages/account/register/register.component.html
@@ -15,11 +15,11 @@
                 <label class="mb-2 text-sm text-start text-grey-900" for="firstName">Họ*</label>
                 <input
                   [(ngModel)]="model.firstName"
-                  name="firstName"
-                  required
                   class="input-field"
                   id="firstName"
+                  name="firstName"
                   placeholder="Nhập họ"
+                  required
                   type="text" />
               </div>
 
@@ -27,11 +27,11 @@
                 <label class="mb-2 text-sm text-start text-grey-900" for="lastName">Tên*</label>
                 <input
                   [(ngModel)]="model.lastName"
-                  name="lastName"
-                  required
                   class="input-field"
                   id="lastName"
+                  name="lastName"
                   placeholder="Nhập tên"
+                  required
                   type="text" />
               </div>
             </div>
@@ -39,29 +39,29 @@
             <label class="mt-6 mb-2 text-sm text-start text-grey-900" for="username">Tên người dùng*</label>
             <input
               [(ngModel)]="model.username"
-              name="username"
-              required
               class="input-field"
               id="username"
+              name="username"
               placeholder="Nhập tên người dùng"
+              required
               type="text" />
 
             <label class="mt-6 mb-2 text-sm text-start text-grey-900" for="email">Email*</label>
             <input
               [(ngModel)]="model.email"
-              name="email"
-              required
               class="input-field"
               id="email"
+              name="email"
               placeholder="Nhập email"
+              required
               type="email" />
 
             <label class="mt-6 mb-2 text-sm text-start text-grey-900" for="phoneNumber">Số điện thoại</label>
             <input
               [(ngModel)]="model.phoneNumber"
-              name="phoneNumber"
               class="input-field"
               id="phoneNumber"
+              name="phoneNumber"
               placeholder="Nhập số điện thoại"
               type="tel" />
 
@@ -69,18 +69,18 @@
             <div class="relative flex items-center">
               <input
                 [(ngModel)]="model.password"
-                name="password"
-                required
+                [type]="showPassword ? 'text' : 'password'"
                 class="input-field password"
                 id="password"
+                name="password"
                 placeholder="Nhập mật khẩu"
-                [type]="showPassword ? 'text' : 'password'" />
+                required />
               <button
-                type="button"
                 (click)="togglePassword()"
-                class="absolute inset-y-0 right-0 flex items-center px-3"
                 aria-label="Toggle password visibility"
-                title="{{ showPassword ? 'Ẩn mật khẩu' : 'Hiển thị mật khẩu' }}">
+                class="absolute inset-y-0 right-0 flex items-center px-3"
+                title="{{ showPassword ? 'Ẩn mật khẩu' : 'Hiển thị mật khẩu' }}"
+                type="button">
                 <i *ngIf="showPassword" class="fa fa-eye text-gray-600 hover:text-gray-800 transition duration-300"></i>
                 <i
                   *ngIf="!showPassword"
@@ -89,14 +89,14 @@
             </div>
 
             <button
-              type="submit"
-              class="w-full px-6 py-3 mt-12 mb-5 text-sm font-bold leading-none text-white transition duration-300 md:w-96 rounded-2xl mx-auto hover:bg-blue-600 focus:ring-4 focus:ring-blue-100 bg-blue-500">
+              class="w-full px-6 py-3 mt-12 mb-5 text-sm font-bold leading-none text-white transition duration-300 md:w-96 rounded-2xl mx-auto hover:bg-blue-600 focus:ring-4 focus:ring-blue-100 bg-blue-500"
+              type="submit">
               Đăng ký
             </button>
 
             <p class="text-sm leading-relaxed text-grey-900">
               Đã có tài khoản?
-              <a href="#" routerLink="/account/login" class="font-bold text-grey-700"> Đăng nhập </a>
+              <a class="font-bold text-grey-700" href="#" routerLink="/account/login"> Đăng nhập </a>
             </p>
           </form>
         </div>
