--- a/src/MLS.MatLidStoreUI/src/app/theme/components/footer/footer.component.html
+++ b/src/MLS.MatLidStoreUI/src/app/theme/components/footer/footer.component.html
@@ -1,56 +1,34 @@
-<footer class="bg-white dark:bg-gray-900">
-  <div class="container pt-4 px-6 mx-auto">
-    <hr class="border-gray-200 dark:border-gray-300" />
-    <div class="flex flex-col items-center text-center">
-      <a href="#">
-        <img alt="MatLidStore logo" class="w-auto h-16" src="/assets/Images/MatLidStore_Logo.png" />
-      </a>
-
-      <p class="max-w-md mx-auto mt-2 text-gray-500 dark:text-gray-400">
-        Modern Artistic Trends in Lifestyle & Design.
-      </p>
-
-      <div class="flex flex-col mt-4 items-center sm:flex-row sm:items-center sm:justify-center">
-        <button
-          (click)="onGitHubClick()"
-          class="github-container flex p-1 w-1 text-sm tracking-wide text-gray-600 capitalize transition-colors duration-300 transform border rounded-md sm:mx-2 dark:border-gray-400 dark:text-gray-300 sm:mt-0 sm:w-auto hover:bg-gray-50 focus:outline-none focus:ring dark:hover:bg-gray-800 focus:ring-gray-300 focus:ring-opacity-40">
-          <div class="github-logo-container flex mx-1 h-5 w-5"></div>
-          <span class="mx-1">GitHub</span>
-        </button>
-
-        <button
-          class="w-full px-3 py-1 text-sm tracking-wide text-white capitalize transition-colors duration-300 transform bg-blue-500 rounded-md sm:mx-2 sm:order-2 sm:w-auto hover:bg-blue-300 focus:outline-none focus:ring focus:ring-blue-200 focus:ring-opacity-80">
-          Thông tin
-        </button>
+<footer class="block py-4">
+  <div class="container mx-auto px-4">
+    <hr class="border-b-1 border-blueGray-200 mb-4" />
+    <div class="flex flex-wrap items-center justify-center md:justify-between">
+      <div class="w-full px-4 md:w-4/12">
+        <div class="text-blueGray-500 py-1 text-center text-sm font-semibold md:text-left">
+          Copyright © {{ date }} by
+          <a href="#" class="text-blueGray-500 hover:text-blueGray-700 py-1 text-sm font-semibold">MATLID</a>
+        </div>
       </div>
-    </div>
-
-    <hr class="my-10 border-gray-200 dark:border-gray-700" />
-
-    <div class="flex flex-col items-center sm:flex-row sm:justify-between">
-      <p class="text-sm text-gray-500">© Copyright 2024. All Rights Reserved by MatLidStore.</p>
-
-      <div class="flex mt-3 -mx-2 sm:mt-0">
-        <a
-          aria-label="Reddit"
-          class="mx-2 text-sm text-gray-500 transition-colors duration-300 hover:text-gray-500 dark:hover:text-gray-300"
-          href="#">
-          Teams
-        </a>
-
-        <a
-          aria-label="Reddit"
-          class="mx-2 text-sm text-gray-500 transition-colors duration-300 hover:text-gray-500 dark:hover:text-gray-300"
-          href="#">
-          Privacy
-        </a>
-
-        <a
-          aria-label="Reddit"
-          class="mx-2 text-sm text-gray-500 transition-colors duration-300 hover:text-gray-500 dark:hover:text-gray-300"
-          href="#">
-          Cookies
-        </a>
+      <div class="w-full px-4 md:w-8/12">
+        <ul class="flex list-none flex-wrap justify-center md:justify-end">
+          <li>
+            <a href="#" class="text-blueGray-600 hover:text-blueGray-800 block px-3 py-1 text-sm font-semibold">
+              MATLID
+            </a>
+          </li>
+          <li>
+            <a href="#" class="text-blueGray-600 hover:text-blueGray-800 block px-3 py-1 text-sm font-semibold">
+              Tìm hiểu về chúng tôi
+            </a>
+          </li>
+          <li>
+            <a href="#" class="text-blueGray-600 hover:text-blueGray-800 block px-3 py-1 text-sm font-semibold">Blog</a>
+          </li>
+          <li>
+            <a href="#" class="text-blueGray-600 hover:text-blueGray-800 block px-3 py-1 text-sm font-semibold">
+              MIT License
+            </a>
+          </li>
+        </ul>
       </div>
     </div>
   </div>
