--- a/src/MLS.MatLidStoreUI/src/styles.scss
+++ b/src/MLS.MatLidStoreUI/src/styles.scss
@@ -1,9 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+
+/* Importing Tailwind CSS file. */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+/* Importing Bootstrap SCSS file. */
+@import "bootstrap/scss/bootstrap";
+
 a {
   text-decoration: none !important;
-  cursor: pointer !important;
 }
